--- a/public/index.html
+++ b/public/index.html
@@ -2,23 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-
-    <script>
-      if (navigator.doNotTrack !== '1' && navigator.userAgent !== 'ReactSnap') {
-        const script = document.createElement('script');
-        script.src = 'https://www.googletagmanager.com/gtag/js?id=G-N7VV0BSZ33';
-        script.async = true;
-        document.head.appendChild(script);
-        window.dataLayer = window.dataLayer || [];
-        function gtag() {
-          dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-        gtag('config', 'G-N7VV0BSZ33');
-      }
-    </script>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="script-src 'self' https://api.projectvidere.com"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover"
+    />
     <title>MTGO Tracker</title>
   </head>
 
