Updated meta, sanitized log output.

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover"
     />
-    <title>MTGO Tracker</title>
+    <title>Videre Tracker</title>
   </head>
 
   <body>
