--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -4,7 +4,7 @@
   }
 </style>
 
-<title>MTGO Tracker | Storybook</title>
+<title>Videre Tracker | Storybook</title>
 <meta
   name="description"
   content="Project Videre's MTGO Tracker design components library."
